k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
        - name: flask-api
          image: tuan4886/flask-api:latest
          imagePullPolicy: Always # Make sure Kubernetes always loads the latest image
          ports:
            - containerPort: 8080
