k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
spec:
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080 # Port in container Flask API
  type: ClusterIP
